<?xml version="2.0"?>
<package format="3">
<!--<package> -->
	<name>lidar2d_preprocess</name>
	<version>2.0.0</version>
	<description>
Nodes to preprocess readings from a 2D LiDAR; for example to discard readings related with fixed structures on the robot (e.g. poles) occluding partially the sensor. 
	</description>

  <author email="rprocha@isr.uc.pt">Rui P. Rocha</author>  
  <maintainer email="rprocha@isr.uc.pt">Rui P. Rocha</maintainer>

 	<license>BSD</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

	<depend>rclcpp</depend>
	<depend>sensor_msgs</depend>
  <!--<depend>dynamic_reconfigure</depend> ??? -->

  <export>                               
        <build_type>ament_cmake</build_type> 
  </export> 

</package>

